--- a/index.html
+++ b/index.html
@@ -351,32 +351,30 @@
             <div class="footer-details">
               <p class="text-center">
                 <span class="span-title">Contact Info </span> <br>
-                <span class="span-footer"> 112 N.Plymouth Way <br>
-                  San Bernardino CA 92408 </span>
+              </p>
+              <p class="text-center mt-2">
+                 112 N.Plymouth Way <br>
+                  San Bernardino CA 92408
               </p>
             </div>
           </div>
           <div class="col">
              <div class="footer-details">
-              <p class="text-center">
-               <span class="span-title text-start">Website</span> <br>
-                <span> </span>
-              </p>
+               <span class="span-title mb-5">Website</span> <br>
+                  <div class="row mt-3">
+                    <div class="col">
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">About us</a></p>
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Services</a></p>
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
+                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
+                    </div>
+                      <div class="col-4">               
+                      </div>
+                  </div>
           </div>
         </div>
-
-        <!-- <div class="footer-logo mb-5">
-          <img src="./img/nacs-logo.png" alt="" />
-        </div> -->
-
-        <!-- <p class="footer-text">
-          <i class="fas fa-map-marker-alt"></i> 1088 Lumia Circle, Redlands CA
-          92374
-        </p>
-        <p class="footer-text"><i class="fas fa-phone"></i> +63 961 123 2546</p>
-        <p class="footer-text">
-          <i class="fas fa-envelope"></i> nacsindustrial@gmail.com
-        </p> -->
 
         <div class="line mt-5"></div>
 
