--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Nacs International Inc</title>
 
     <!-- css -->
+
+    <link rel="stylesheet" href="./style/header.css" />
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/mq.css" />
     <!-- Boostrap 5 -->
@@ -62,10 +64,10 @@
           <i class="fa-solid fa-xmark" onclick="toggleMenu()"></i>
         </li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="">SHOP</a></li>
+        <li><a href="./shop.html">SHOP</a></li>
         <li><a href="">BLOGS</a></li>
-        <li><a href="">FAQS</a></li>
-        <li><a href="">CONTACT US</a></li>
+        <li><a href="./faqs.html">FAQS</a></li>
+        <li><a href="./contact.html">CONTACT US</a></li>
       </ul>
       <div class="menu-icon">
         <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
