--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,44 @@
 
 <div class="container-fluid">
     <div class="contact_us">
-       <button type="button" class="btn btn-primary">Contact us</button>
+       <button type="button" class="btn btn-primary mt-5">Contact us</button>
+       <p class="text get mt-5">
+        GET IN TOUCH
+       </p>
+       <span class="text-center">
+        Please use our contact form for all inquiries, or reach out to us directly using the contact details below. <br>
+        You’re welcome to get in touch via email or phone.
+       </span>
+
+       <div class="row g-0 mt-5" id="row-info">
+        <div class="col">
+          <i class="fa-solid fa-phone fa-3x mb-3"></i>
+          <p class="text-center ">
+            PHONE NUMBER <br>
+            <span class="info">+63 961 123 2546</span>
+          </p>
+        </div>
+         <div class="col">
+           <i class="fa-solid fa-envelope fa-3x mb-3"></i>
+            <p class="text-center">
+            EMAIL ADDRESS <br>
+            <span class="info">nacsindustrial@gmail.com</span>
+          </p>
+        </div>
+         <div class="col">
+          <i class="fa-solid fa-location-dot fa-3x mb-3"></i>
+           <p class="text-center">
+            LOCATION <br>
+            <span class="info">112 N.Plymouth Way <br>
+                          San Bernardino CA 92408</span>
+          </p>
+        </div>
+       </div>
+
+
+       <!-- iframe google maps -->
+       <div class="iframe mt-5 mb-5">
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.5248603303467!2d-117.2870607!3d34.0560573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcac8a6be659a9%3A0x68b41b37b43b997f!2s112%20Plymouth%20Way%2C%20San%20Bernardino%2C%20CA%2092408%2C%20USA!5e0!3m2!1sen!2sph!4v1747988066336!5m2!1sen!2sph" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
 </div>
 
