--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style/header.css" />
     <link rel="stylesheet" href="./style/style.css" />
 
+    <style>
+    </style>
+
     <title>Shop</title>
 
     <!-- Boostrap 5 -->
