--- a/faqs.html
+++ b/faqs.html
@@ -68,8 +68,58 @@
       </div>
     </nav>
 
+    <!-- FAQS starts here -->
 
+    <div class="container-fluid">
+        <div class="faqs">
+            <button type="button" class="btn btn-primary">FAQs</button>
+            <p class="text-title">
+              FREQUENTLY ASKED QUESTIONS
+              <span class="sub-title">HAVE YOU FIND FREQUENTLY ASKED QUESTIONS, WE WILL HELP YOU TO FIND THE ANSWER</span>
+            </p>
 
+            <!-- category -->
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="about-tab" data-bs-toggle="tab" data-bs-target="#about" type="button" role="tab" aria-controls="about" aria-selected="true">ABOUT NACS</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="tac-tab" data-bs-toggle="tab" data-bs-target="#tac" type="button" role="tab" aria-controls="tac" aria-selected="false">TERMS AND CONDITION</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="oad-tab" data-bs-toggle="tab" data-bs-target="#oad" type="button" role="tab" aria-controls="oad" aria-selected="false">ORDER AND DELIVERY</button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="pac-tab" data-bs-toggle="tab" data-bs-target="#pac" type="button" role="tab" aria-controls="pac" aria-selected="false">PAYMENT AND CONDITION</button>
+              </li>
+            </ul>
+
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">
+                <p class="text-start .about">
+                  What is NACS? <br>
+                  <span class="sub-title">Northern American Consumable Solutions (NACS) is an online marketplace dedicated to providing customers with a wide range of products, including electrical components, packaging materials, HVAC systems, engineering tools, and industrial supplies. The platform is designed to meet the needs of individuals and businesses seeking quality materials and supplies in these sectors.</span>
+                </p>
+                <p class="text-start .about">
+                  What are the products offered by NACS <br>
+                  <span class="sub-title">Northern American Consumable Solutions (NACS) collaborates with reputable suppliers to offer a comprehensive range of products, including electrical components, packaging materials, HVAC systems, engineering tools, and industrial supplies. By leveraging these partnerships, NACS ensures the delivery of quality materials at competitive prices, meeting the diverse needs of its customers.</span>
+                </p>
+              </div>
+              <div class="tab-pane fade" id="tac" role="tabpanel" aria-labelledby="tac-tab">...</div>
+              <div class="tab-pane fade" id="oad" role="tabpanel" aria-labelledby="oad-tab">
+                <p class="text-start .about">
+                  What are the products offered by NACS <br>
+                  <span class="sub-title">Northern American Consumable Solutions (NACS) collaborates with reputable suppliers to offer a comprehensive range of products, including electrical components, packaging materials, HVAC systems, engineering tools, and industrial supplies. By leveraging these partnerships, NACS ensures the delivery of quality materials at competitive prices, meeting the diverse needs of its customers.</span>
+                </p>
+
+              </div>
+               <div class="tab-pane fade" id="pac" role="tabpanel" aria-labelledby="pac-tab">
+                
+               </div>
+            </div>
+        </div>
+    </div>
+    
 
 
 
