--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <!-- css -->
 
-    <link rel="stylesheet" href="./style/header.css" />
-    <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="./style/mq.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/mq.css" />
     <!-- Boostrap 5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -207,7 +207,7 @@
                   of Measurement: Metric Dial Indicator Type: Plunger
                 </p>
                 <div class="mt-auto">
-                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                  <a href="./shop.html" class="btn btn-primary w-100">View Shop</a>
                 </div>
               </div>
             </div>
@@ -233,7 +233,7 @@
                   as fuel transfer operations or chemical processing facilities.
                 </p>
                 <div class="mt-auto">
-                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                <a href="./shop.html" class="btn btn-primary w-100">View Shop</a>
                 </div>
               </div>
             </div>
@@ -260,7 +260,7 @@
                   tubing.
                 </p>
                 <div class="mt-auto">
-                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                 <a href="./shop.html" class="btn btn-primary w-100">View Shop</a>
                 </div>
               </div>
             </div>
@@ -287,7 +287,7 @@
                   commercial, and light industrial HVAC systems.
                 </p>
                 <div class="mt-auto">
-                  <a href="#" class="btn btn-primary w-100">View Product</a>
+                 <a href="./shop.html" class="btn btn-primary w-100">View Shop</a>
                 </div>
               </div>
             </div>
