--- a/shop.html
+++ b/shop.html
@@ -86,10 +86,7 @@
             <button class="nav-link shadow-sm me-2" id="pills-PH-tab" data-bs-toggle="pill" data-bs-target="#pills-PH" type="button" role="tab" aria-controls="pills-PH" aria-selected="false">Pneumatics & Hydraulics</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2" id="pills-Electrical-tab" data-bs-toggle="pill" data-bs-target="#pills-Electrical" type="button" role="tab" aria-controls="pills-Electrical" aria-selected="false">Electrical</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2" id="pills-RH-tab" data-bs-toggle="pill" data-bs-target="#pills-RH" type="button" role="tab" aria-controls="pills-RH" aria-selected="true">Refrigeration & hvac</button>
+            <button class="nav-link shadow-sm me-2" id="pills-electrical-tab" data-bs-toggle="pill" data-bs-target="#pills-electrical" type="button" role="tab" aria-controls="pills-electrical" aria-selected="false">Electrical</button>
           </li>
         </ul>
 
@@ -407,27 +404,120 @@
                   <!--  -->
                 </div>
           </div>
-          <div class="tab-pane fade" id="pills-PH" role="tabpanel" aria-labelledby="pills-PH-tab">test5</div>
-          <div class="tab-pane fade" id="pills-Electrical" role="tabpanel" aria-labelledby="pills-Electrical-tab">test6</div>
-          <div class="tab-pane fade" id="pills-RH" role="tabpanel" aria-labelledby="pills-RH-tab">
-
-                <!-- product view -->
+          <div class="tab-pane fade" id="pills-PH" role="tabpanel" aria-labelledby="pills-PH-tab">
+            <!-- product view -->
                 <div class="row justify-content-center">
                   <div class="col-auto">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
-                        src="./img/products/1.jpg"
+                        src="./img/products/11.jpg"
                         class="card-img-top fixed-img"
                         alt="image"
                       />
                       <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-center">
-                          Economy Dial Plunger Indicator
+                         SMC AMC520-04 EXHAUST CLEANER
                         </h5>
                         <p class="card-text">
-                          0 mm to 10 mm Measuring Range MC Master No.: 20715A83 System
-                          of Measurement: Metric Dial Indicator Type: Plunger
+                        The SMC AMC520-04 Exhaust Cleaner is designed for pneumatic systems, reducing noise by up to 35 dB(A) and removing over 99.9% of oil mist. It features a 1/2" Rc port, 95% filtration efficiency for 0.3 µm particles, and operates at pressures up to 0.1 MPa, ensuring clean and quiet air exhaust.</p>
+                        <div class="mt-auto">
+                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-auto">
+                    <!--  -->
+                    <div
+                      class="card h-100 d-flex flex-column"
+                      style="width: 18rem"
+                      height="25rem"
+                    >
+                      <img
+                        src="./img/products/25.jpg"
+                        class="card-img-top fixed-img"
+                        alt="image"
+                      />
+                      <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">AIR FILTER REGULATOR, AC40B-A; 1/2" PORT SIZE; SMC</h5>
+                        <p class="card-text">
+                         SMC AC40B-A Air Filter Regulator, 1/2" Port – Integrated filter and regulator unit for clean, regulated air in pneumatic systems.</p>
+                        <div class="mt-auto">
+                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-auto">
+                    <!--  -->
+                    <div
+                      class="card h-100 d-flex flex-column"
+                      style="width: 18rem"
+                      height="25rem"
+                    >
+                      <img
+                        src="./img/products/26.jpg"
+                        class="card-img-top fixed-img"
+                        alt="image"
+                      />
+                      <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">FILTER REGULATOR, AW40-A; 1/2" PORT SIZE; SMC</h5>
+                        <p class="card-text">
+                        SMC AW40-A Filter Regulator, 1/2" Port – Compact air filter regulator combining filtration and pressure regulation in one unit; ideal for pneumatic systems.</p>
+                        <div class="mt-auto">
+                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                  <div class="col-auto">
+                    <!--  -->
+                    <div
+                      class="card h-100 d-flex flex-column"
+                      style="width: 18rem"
+                      height="25rem"
+                    >
+                      <img
+                        src="./img/products/27.jpg"
+                        class="card-img-top fixed-img"
+                        alt="image"
+                      />
+                      <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">KOGANEI FREE JOINT CJL-12X1.25-109W</h5>
+                        <p class="card-text">
+                        A floating joint designed for precise alignment in pneumatic systems, featuring a 12mm diameter and 1.25mm pitch thread. Ideal for applications requiring minimal friction and maintenance-free operation.</p>
+                        <div class="mt-auto">
+                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                </div>
+            
+          </div>
+
+          <div class="tab-pane fade" id="pills-electrical" role="tabpanel" aria-labelledby="pills-electrical-tab">
+                  <!-- product view -->
+                <div class="row justify-content-center">
+                  <div class="col-auto">
+                    <!--  -->
+                    <div class="card h-100 d-flex flex-column" style="width: 18rem">
+                      <img
+                        src="./img/products/10.jpg"
+                        class="card-img-top fixed-img"
+                        alt="image"
+                      />
+                      <div class="card-body d-flex flex-column">
+                        <h5 class="card-title text-center">
+                          STAINLESS BALL VALVE, 1" FERRULE, CLAMP CONNECTION BOTH ENDS
+                        </h5>
+                        <p class="card-text">
+                        Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
                           <a href="#" class="btn btn-primary w-100">View Shop</a>
@@ -444,16 +534,14 @@
                       height="25rem"
                     >
                       <img
-                        src="./img/products/2.jpg"
+                        src="./img/products/6.jpg"
                         class="card-img-top fixed-img"
                         alt="image"
                       />
                       <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Reelcraft Grounding Reels</h5>
+                        <h5 class="card-title">GATE VALVE 1 1/4"</h5>
                         <p class="card-text">
-                          Reelcraft offers a range of grounding reels designed to safely
-                          dissipate static electricity in hazardous environments, such
-                          as fuel transfer operations or chemical processing facilities.
+                          A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
                           <a href="#" class="btn btn-primary w-100">View Shop</a>
@@ -470,17 +558,14 @@
                       height="25rem"
                     >
                       <img
-                        src="./img/products/3.jpg"
+                        src="./img/products/23.jpg"
                         class="card-img-top fixed-img"
                         alt="image"
                       />
                       <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">Ridgid Copper Pipe Reamer 1/2"-2"</h5>
+                        <h5 class="card-title">STAINLESS BALL VALVE, 1" FERRULE, CLAMP CONNECTION BOTH ENDS</h5>
                         <p class="card-text">
-                          RIDGID 29993 Inner-Outer Reamer (Model 227S) is a
-                          professional-grade tool designed for clean and efficient inner
-                          reaming and outer deburring of copper and stainless steel
-                          tubing.
+                         Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
                           <a href="#" class="btn btn-primary w-100">View Shop</a>
@@ -497,17 +582,14 @@
                       height="25rem"
                     >
                       <img
-                        src="./img/products/4.jpg"
+                        src="./img/products/24.jpg"
                         class="card-img-top fixed-img"
                         alt="image"
                       />
                       <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">REFRIGERANT Freon 407C 11.30KG</h5>
+                        <h5 class="card-title">GATE VALVE 1 1/4"</h5>
                         <p class="card-text">
-                          Freon™ 407C is a non-ozone-depleting, HFC-based refrigerant
-                          blend designed to replace R-22 in air conditioning and
-                          refrigeration systems. It is widely used in residential,
-                          commercial, and light industrial HVAC systems.
+                          A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
                           <a href="#" class="btn btn-primary w-100">View Shop</a>
@@ -517,10 +599,9 @@
                   </div>
                   <!--  -->
                 </div>
-             
-
           </div>
         </div>
+      </div>
     </div>
  </div>
 
