--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         </li>
         <li><a href="index.html">HOME</a></li>
         <li><a href="./shop.html">SHOP</a></li>
-        <li><a href="">BLOGS</a></li>
+        <!-- <li><a href="">BLOGS</a></li> -->
         <li><a href="./faqs.html">FAQS</a></li>
         <li><a href="./contact.html">CONTACT US</a></li>
       </ul>
@@ -155,12 +155,11 @@
                <span class="span-title mb-5">Website</span> <br>
                   <div class="row mt-3">
                     <div class="col">
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">About us</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Services</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p class="text-end"><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
+                      <p class="text-end"><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p class="text-end"><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
                       <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
+                      <p class="text-end"><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
                     </div>
                       <div class="col-4">               
                       </div>
