--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
         </li>
         <li><a href="index.html">HOME</a></li>
         <li><a href="./shop.html">SHOP</a></li>
-        <li><a href="">BLOGS</a></li>
+        <!-- <li><a href="">BLOGS</a></li> -->
         <li><a href="./faqs.html">FAQS</a></li>
         <li><a href="./contact.html">CONTACT US</a></li>
       </ul>
@@ -72,7 +72,7 @@
  <!-- shops starts here -->
 <div class="shop">
   <div class="container-fluid">
-          <ul class="nav nav-pills mb-3 shadow-sm p-2 bg-white rounded" id="pills-tab" role="tablist">
+          <ul class="nav nav-pills shadow p-3 mb-5 bg-body rounded" style=" border-radius: 0.5rem;" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="nav-link active shadow-sm me-2" id="pills-TMD-tab" data-bs-toggle="pill" data-bs-target="#pills-TMD" type="button" role="tab" aria-controls="pills-TMD" aria-selected="false">Test & Measurement Devices</button>
           </li>
@@ -114,7 +114,7 @@
                           of Measurement: Metric Dial Indicator Type: Plunger
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -143,7 +143,7 @@
                           • HART mode setting with loop power, adds 250 ohm resistor
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -167,7 +167,7 @@
                         The RS PRO Type K Heavy Duty Thermocouple features a 150mm stainless steel probe, operates from -60°C to +350°C, and includes a 2m braided cable. It's durable, fast-responding, and ideal for industrial and HVAC use.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -196,7 +196,7 @@
                           Z accuracy: E¹=(2.8 + 5L/1000)µm
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -227,7 +227,7 @@
                         Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -251,7 +251,7 @@
                           A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -275,7 +275,7 @@
                          Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -299,7 +299,7 @@
                           A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -326,7 +326,7 @@
                         The Omron GLS-1 is a magnetic door sensor with a 15 mm sensing range, normally open contact, and 10 W switching capacity. It's durable, reliable, and ideal for security and automation use.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -350,7 +350,7 @@
                         The Mitsubishi Q312B is a 12-slot base unit for MELSEC-Q Series PLCs, supporting power, CPU, I/O, and special modules. It's DIN rail mountable and ideal for industrial automation setups
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -373,7 +373,7 @@
                         <p class="card-text">
                         The KG AUTO Push Button Switch series includes non-illuminated (KGF-JM1) and illuminated models for DC (KGX-JMD21) and AC (KGX-JMV21) voltages. These 25mm switches come in various LED colors and are ideal for industrial control panels.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -396,7 +396,7 @@
                         <p class="card-text">
                         The Mitsubishi FR-E720-0.2K is a compact 0.2 kW inverter for precise motor control, featuring safety functions, USB/RS-485 ports, and a built-in display. It’s ideal for small industrial applications like conveyors and pumps.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -422,7 +422,7 @@
                         <p class="card-text">
                         The SMC AMC520-04 Exhaust Cleaner is designed for pneumatic systems, reducing noise by up to 35 dB(A) and removing over 99.9% of oil mist. It features a 1/2" Rc port, 95% filtration efficiency for 0.3 µm particles, and operates at pressures up to 0.1 MPa, ensuring clean and quiet air exhaust.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -445,7 +445,7 @@
                         <p class="card-text">
                          SMC AC40B-A Air Filter Regulator, 1/2" Port – Integrated filter and regulator unit for clean, regulated air in pneumatic systems.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -468,7 +468,7 @@
                         <p class="card-text">
                         SMC AW40-A Filter Regulator, 1/2" Port – Compact air filter regulator combining filtration and pressure regulation in one unit; ideal for pneumatic systems.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -491,7 +491,7 @@
                         <p class="card-text">
                         A floating joint designed for precise alignment in pneumatic systems, featuring a 12mm diameter and 1.25mm pitch thread. Ideal for applications requiring minimal friction and maintenance-free operation.</p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -500,7 +500,6 @@
                 </div>
             
           </div>
-
           <div class="tab-pane fade" id="pills-electrical" role="tabpanel" aria-labelledby="pills-electrical-tab">
                   <!-- product view -->
                 <div class="row justify-content-center">
@@ -520,7 +519,7 @@
                         Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                         <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -544,7 +543,7 @@
                           A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                        <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -568,7 +567,7 @@
                          Durable stainless steel ball valve with 1" ferrule and clamp connections on both ends. Designed for secure, sanitary use in food, beverage, and pharmaceutical systems. Easy to install, remove, and clean.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -592,7 +591,7 @@
                           A 1 1/4" gate valve is a manual shut-off valve used to control flow in water, gas, or oil systems. It offers reliable sealing and minimal flow restriction, with common materials including brass or stainless steel.
                         </p>
                         <div class="mt-auto">
-                          <a href="#" class="btn btn-primary w-100">View Shop</a>
+                          <a href="#" class="btn btn-primary w-100">View Product</a>
                         </div>
                       </div>
                     </div>
@@ -639,13 +638,12 @@
                <span class="span-title mb-5">Website</span> <br>
                   <div class="row mt-3">
                     <div class="col">
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">About us</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Services</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p class="text-end"><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
+                      <p class="text-end"><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p class="text-end"><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
                       <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
-                    </div>
+                      <p class="text-end"><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
+                   </div>
                       <div class="col-4">               
                       </div>
                   </div>
