--- a/shop.html
+++ b/shop.html
@@ -74,19 +74,19 @@
   <div class="container-fluid">
           <ul class="nav nav-pills shadow p-3 mb-5 bg-body rounded" style=" border-radius: 0.5rem;" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active shadow-sm me-2" id="pills-TMD-tab" data-bs-toggle="pill" data-bs-target="#pills-TMD" type="button" role="tab" aria-controls="pills-TMD" aria-selected="false">Test & Measurement Devices</button>
+            <button class="nav-link text-dark active shadow-sm me-2" id="pills-TMD-tab" data-bs-toggle="pill" data-bs-target="#pills-TMD" type="button" role="tab" aria-controls="pills-TMD" aria-selected="false">Test & Measurement Devices</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2"  id="pills-VP-tab" data-bs-toggle="pill" data-bs-target="#pills-VP" type="button" role="tab" aria-controls="pills-VP" aria-selected="false">Valves & Plumbing</button>
+            <button class="nav-link text-dark shadow-sm me-2"  id="pills-VP-tab" data-bs-toggle="pill" data-bs-target="#pills-VP" type="button" role="tab" aria-controls="pills-VP" aria-selected="false">Valves & Plumbing</button>
           </li>
            <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2" id="pills-ES-tab" data-bs-toggle="pill" data-bs-target="#pills-ES" type="button" role="tab" aria-controls="pills-ES" aria-selected="false">Electronics & Semicon</button>
+            <button class="nav-link text-dark shadow-sm me-2" id="pills-ES-tab" data-bs-toggle="pill" data-bs-target="#pills-ES" type="button" role="tab" aria-controls="pills-ES" aria-selected="false">Electronics & Semicon</button>
           </li>
            <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2" id="pills-PH-tab" data-bs-toggle="pill" data-bs-target="#pills-PH" type="button" role="tab" aria-controls="pills-PH" aria-selected="false">Pneumatics & Hydraulics</button>
+            <button class="nav-link text-dark shadow-sm me-2" id="pills-PH-tab" data-bs-toggle="pill" data-bs-target="#pills-PH" type="button" role="tab" aria-controls="pills-PH" aria-selected="false">Pneumatics & Hydraulics</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link shadow-sm me-2" id="pills-electrical-tab" data-bs-toggle="pill" data-bs-target="#pills-electrical" type="button" role="tab" aria-controls="pills-electrical" aria-selected="false">Electrical</button>
+            <button class="nav-link text-dark shadow-sm me-2" id="pills-electrical-tab" data-bs-toggle="pill" data-bs-target="#pills-electrical" type="button" role="tab" aria-controls="pills-electrical" aria-selected="false">Electrical</button>
           </li>
         </ul>
 
