--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
-    <title>Nacs International Inc</title>
+    <title>NACS US</title>
 
     <!-- css -->
 
@@ -40,7 +40,7 @@
           <div class="col-9" id="col-heroes">
             <div class="icon-text">
               <img src="./img/envelope.png" alt="icon" />
-              <span class="span">nacsindustrial@gmail.com</span>
+              <span class="span">nacs-us@gmail.com</span>
             </div>
             <div class="icon-text">
               <img src="./img/phone-call.png" alt="icon" />
@@ -189,7 +189,7 @@
         </div>
 
         <!-- product view -->
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="row-product">
           <div class="col-auto">
             <!--  -->
             <div class="card h-100 d-flex flex-column" style="width: 18rem">
