--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
     <link rel="icon" type="image/png" href="./img/nacs-logo.png" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
+    <link rel="stylesheet" href="./css/mq.css" />
     <style>
     </style>
 
-    <title>Shop</title>
+    <title>NACS US</title>
 
     <!-- Boostrap 5 -->
     <link
@@ -42,7 +42,7 @@
           <div class="col-9" id="col-heroes">
             <div class="icon-text">
               <img src="./img/envelope.png" alt="icon" />
-              <span class="span">nacsindustrial@gmail.com</span>
+             <span class="span">nacs-us@gmail.com</span>
             </div>
             <div class="icon-text">
               <img src="./img/phone-call.png" alt="icon" />
