--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
     <!-- for css testing and debugging -->
     <style>
-
-
-</style>
+        .text-align-end {
+          text-align: end;
+        }
+  </style>
   </head>
   <body>
     <!-- header  -->
@@ -195,7 +196,7 @@
 
         <!-- product view -->
         <div class="row justify-content-center" id="row-product">
-          <div class="col-auto">
+          <div class="col-auto card-responsive">
             <!--  -->
             <div class="card h-100 d-flex flex-column" style="width: 18rem">
               <img
@@ -218,7 +219,7 @@
             </div>
           </div>
 
-          <div class="col-auto">
+          <div class="col-auto card-responsive">
             <!--  -->
             <div
               class="card h-100 d-flex flex-column"
@@ -244,7 +245,7 @@
             </div>
           </div>
 
-          <div class="col-auto">
+          <div class="col-auto card-responsive">
             <!--  -->
             <div
               class="card h-100 d-flex flex-column"
@@ -271,7 +272,7 @@
             </div>
           </div>
           <!--  -->
-          <div class="col-auto">
+          <div class="col-auto card-responsive">
             <!--  -->
             <div
               class="card h-100 d-flex flex-column"
