--- a/faqs.html
+++ b/faqs.html
@@ -131,38 +131,38 @@
 
 
     <!-- footer -->
-    <footer>
+      <footer>
       <div class="container">
-        <div class="row g-0" id="footer-row">
-          <div class="col">
-            <div class="logo-footer">
+        <div class="row g-4 py-4 px-2 text-center text-md-start" id="footer-row">
+          <div class="col-12 col-md-4">
+            <div class="logo-footer mb-3 mb-md-0">
               <img src="./img/nacs-logo.png" alt="footer-logo" />
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-4">
             <div class="footer-details">
               <p class="text-center">
                 <span class="span-title">Contact Info </span> <br>
               </p>
-              <p class="text-center mt-2">
+              <p class="text-center mt-2 d-block">
                  112 N.Plymouth Way <br>
                   San Bernardino CA 92408
               </p>
             </div>
           </div>
-          <div class="col">
-             <div class="footer-details">
-               <span class="span-title mb-5">Website</span> <br>
+          <div class="col-12 col-md-4">
+             <div class="footer-details text-align-end">
+              <div class="mb-3 responsive-align">
+                <span class="span-title">Website</span>
+              </div>
                   <div class="row mt-3">
-                    <div class="col">
-                      <p class="text-end"><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
-                      <p class="text-end"><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
-                      <p class="text-end"><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
-                      <p class="text-end"><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
-                   </div>
-                      <div class="col-4">               
-                      </div>
+                    <div class="col responsive-center">
+                      <p><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
+                      <p><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
+                      <p><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
+                      <p><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
+                    </div>
                   </div>
           </div>
         </div>
@@ -172,6 +172,7 @@
         <p class="text-muted mt-5">© Copyright 2024, nacsinternational.com</p>
       </div>
     </footer>
+
 
     <!-- Font awesome -->
     <script
