--- a/shop.html
+++ b/shop.html
@@ -98,7 +98,7 @@
 
                 <!-- product view -->
                 <div class="row justify-content-center">
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
@@ -121,7 +121,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -150,7 +150,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -174,7 +174,7 @@
                     </div>
                   </div>
                   <!--  -->
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -212,7 +212,7 @@
 
              <!-- product view -->
                 <div class="row justify-content-center">
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
@@ -234,7 +234,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -258,7 +258,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive ">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -282,7 +282,7 @@
                     </div>
                   </div>
                   <!--  -->
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -311,7 +311,7 @@
           <div class="tab-pane fade" id="pills-ES" role="tabpanel" aria-labelledby="pills-ES-tab">
 
             <div class="row justify-content-center">
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
@@ -333,7 +333,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -357,7 +357,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -380,7 +380,7 @@
                     </div>
                   </div>
                   <!--  -->
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -408,7 +408,7 @@
           <div class="tab-pane fade" id="pills-PH" role="tabpanel" aria-labelledby="pills-PH-tab">
             <!-- product view -->
                 <div class="row justify-content-center">
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
@@ -429,7 +429,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -452,7 +452,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -475,7 +475,7 @@
                     </div>
                   </div>
                   <!--  -->
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -504,7 +504,7 @@
           <div class="tab-pane fade" id="pills-electrical" role="tabpanel" aria-labelledby="pills-electrical-tab">
                   <!-- product view -->
                 <div class="row justify-content-center">
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div class="card h-100 d-flex flex-column" style="width: 18rem">
                       <img
@@ -526,7 +526,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -550,7 +550,7 @@
                     </div>
                   </div>
 
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -574,7 +574,7 @@
                     </div>
                   </div>
                   <!--  -->
-                  <div class="col-auto">
+                  <div class="col-auto card-responsive">
                     <!--  -->
                     <div
                       class="card h-100 d-flex flex-column"
@@ -615,38 +615,38 @@
 
 
     <!-- footer -->
-    <footer>
+   <footer>
       <div class="container">
-        <div class="row g-0" id="footer-row">
-          <div class="col">
-            <div class="logo-footer">
+        <div class="row g-4 py-4 px-2 text-center text-md-start" id="footer-row">
+          <div class="col-12 col-md-4">
+            <div class="logo-footer mb-3 mb-md-0">
               <img src="./img/nacs-logo.png" alt="footer-logo" />
             </div>
           </div>
-          <div class="col">
+          <div class="col-12 col-md-4">
             <div class="footer-details">
               <p class="text-center">
                 <span class="span-title">Contact Info </span> <br>
               </p>
-              <p class="text-center mt-2">
+              <p class="text-center mt-2 d-block">
                  112 N.Plymouth Way <br>
                   San Bernardino CA 92408
               </p>
             </div>
           </div>
-          <div class="col">
-             <div class="footer-details">
-               <span class="span-title mb-5">Website</span> <br>
+          <div class="col-12 col-md-4">
+             <div class="footer-details text-align-end">
+              <div class="mb-3 responsive-align">
+                <span class="span-title">Website</span>
+              </div>
                   <div class="row mt-3">
-                    <div class="col">
-                      <p class="text-end"><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
-                      <p class="text-end"><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
-                      <p class="text-end"><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
-                      <p class="text-end"><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
-                      <p class="text-end"><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
-                   </div>
-                      <div class="col-4">               
-                      </div>
+                    <div class="col responsive-center">
+                      <p><a href="./index.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Home</a></p>
+                      <p><a href="./shop.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Shop</a></p>
+                      <p><a href="./faqs.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">FAQS</a></p>
+                      <p><a href="" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Blog</a></p>
+                      <p><a href="./contact.html" class="footer-link" style=" text-decoration: none; color:#1a1a1a ;">Contact us</a></p>
+                    </div>
                   </div>
           </div>
         </div>
